--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "scripts": {
     "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.1",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   }
 }
